--- a/train_and_run_od_model.ipynb
+++ b/train_and_run_od_model.ipynb
@@ -2553,6 +2553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# todo: try out this instead _export_labels(self, label_filepath: str)\n",
     "import json\n",
     "import os\n",
     "\n",
