make annotations stay in subdir

--- a/train_cross_validation.ipynb
+++ b/train_cross_validation.ipynb
@@ -523,9 +523,11 @@
     "\n",
     "train_only_fold_number = 0 \n",
     "\n",
+    "fold_dir = \"annotations/cross_val/\"\n",
     "fold_files = ['4684_cv_fold_0.csv','4684_cv_fold_1.csv','4684_cv_fold_2.csv','4684_cv_fold_3.csv','4684_cv_fold_4.csv']\n",
     "\n",
     "for fold_i, fold_file in enumerate(fold_files):\n",
+    "    fold_file = os.path.join(fold_dir, fold_file)\n",
     "    custom_model_dir_name = 'model_'+\"2488_more_classes_plus_indiv\"#str(num_distinct_files)\n",
     "    model_dir = f\"models/{model_name}/{custom_model_dir_name}_e{str(epochs)}_b{str(batch_size)}_cvf_{fold_i}\"\n",
     "    if train_only_fold_number is not None:\n",
